# django-channels

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: redis_channel_test.py
app/blogs/: admin.py  consumers.py  mixins.py  models.py  routings.py  urls.py  views.py
app/blogs/migrations/: 0001_initial.py
app/blogs/templates/blogs/: base.html  posts_index.html
app/blogs/templates/blogs/partial/: post.html
app/chats/: admin.py  consumers.py  forms.py  models.py  routings.py  urls.py  views.py
app/chats/migrations/: 0001_initial.py  0002_alter_room_options_room_owner.py  0003_roommember_room_online_user_set.py
app/chats/templates/chats/: base.html  echo_page.html  index.html  room_chat.html  room_delete_confirm.html  room_form.html
app/config/: asgi.py  extended_json.py  settings.py  urls.py
app/config/templates/: base.html
app/config/templates/partials/: form.html
app/users/: urls.py  views.py
app/users/templates/users/: profile.html
